--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
             
             if (searchTerm.includes('mobile')) {
                 resultButton.textContent = 'View Mobile Phones on Amazon';
-                resultButton.onclick = () => window.location.href = 'https://www.amazon.com';
+                resultButton.onclick = () => window.location.href = 'https://akshat1804.github.io/phone/';
             } else if (searchTerm.includes('computer')) {
                 resultButton.textContent = 'View Computers on Google';
-                resultButton.onclick = () => window.location.href = 'https://www.google.com';
+                resultButton.onclick = () => window.location.href = 'https://akshat1804.github.io/Computer/';
             } else if (searchTerm.includes('television')) {
                 resultButton.textContent = 'View Televisions on Flipkart';
                 resultButton.onclick = () => window.location.href = 'https://www.flipkart.com';
             } else {
-                resultButton.textContent = 'No specific results - Search on Google';
-                resultButton.onclick = () => window.location.href = 'https://www.google.com';
+                resultButton.textContent = 'No specific results - Search on EcoVibe';
+                resultButton.onclick = () => window.location.href = 'https://akshat1804.github.io/EcoVibe/';
             }
         }, 3000);
     }
